@@ -6,6 +6,7 @@
 - FromDirector sortby=year
 - Fix missing scrollbars
 - Fix music osd rating
+- Fix for colorbox settings
 
 0.9.46
 - Add blur effect settings
